fixed spacing on classes

--- a/MentalHealthConsole/style.css
+++ b/MentalHealthConsole/style.css
@@ -11,14 +11,14 @@ body {
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
-  
+
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
     }
     100% {
         opacity: 1;
-     }
+    }
 }
 
 #container {
@@ -137,7 +137,8 @@ body {
     height: 55px;
     width: 300px;
     font-size: 28px;
-    text-shadow: 1px 1px 2px #C0BFC0;padding-top:10px;
+    text-shadow: 1px 1px 2px #C0BFC0;
+    padding-top: 10px;
 }
 
 .item-cell {
@@ -168,6 +169,7 @@ body {
     text-indent: 11px;
     font-family: "Open Sans";
 }
+
 .itemDescriptionT {
     height: 246x;
     width: 255px;
@@ -506,43 +508,67 @@ body {
     width: 100%;
     height: auto;
 }
+
+
 /*location*/
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+#Dir-Hours {
+    height: 358px;
+    width: 504px;
+    background: none;
+    border: ;
+    float: left;
+    padding-top: 25px;
+    margin-left: ;
+    position: relative;
+}
 
-#Dir-Hours{
-    height:358px;
-    width:504px;
-    background:none;
-    border:;
-    float:left;
-    padding-top:25px;
-    margin-left:;
-   position:relative;}
+#headerTime {
+    height: 30px;
+    Width: 100%;
+    font-size: 32px;
+    color: #ffffff;
+    font-weight: bolder;
+    text-decoration: ;
+    text-align: center;
+    font-family: ariel;
+    font-family: 'Dancing Script', cursive;
+    LINE-HEIGHT: 2PX;
+}
 
-#headerTime{
-height:30px;
-Width:100%;
-font-size:32px;
-color:#ffffff;
-font-weight:bolder;
-text-decoration:  ;
-text-align:center;
-font-family: ariel;
-font-family: 'Dancing Script', cursive;
-LINE-HEIGHT:2PX;
+.dates {
+    border: ;
+    margin-top: 20px;
+    palsm 73: 26
+}
+
+.dates-holder {
+    height: 40px;
+    width: 100%;
+    border: ;
+}
+
+.dates-holder-day {
+    height: 40px;
+    width: 55%;
+    border: ;
+    float: left;
+    font-size: 28px;
+    color: #ffffff;
+    text-indent: 22px;
+    FONT-WEIGHT: ;
+}
+
+.dates-holder-time {
+    height: 40px;
+    width: 44%;
+    border: ;
+    float: left;
+    font-size: 28px;
+    color: #ffffff;
+    text-align: ;
 }
 
 
-.dates{
-      border:;
-      margin-top:20px;
-palsm 73:26
-}
-.dates-holder{height:40px;width:100%;border:;}
-
-.dates-holder-day{height:40px;width:55%;border:;float:left;
-font-size:28px;color:#ffffff;text-indent:22px;FONT-WEIGHT:;}
-
-.dates-holder-time{height:40px;width:44%;border:;float:left;font-size:28px;color:#ffffff;text-align:;}
 /*location*/
